// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressSpinner with finished progress should render a completed state video with auto play and loop 1`] = `
<div>
  <div
    class="videoWrapper"
  >
    <video
      autoplay=""
      loop=""
      src="https://prod-cdn.wetransfer.net/packs/media/transfer_window/transfer_completed-3-5dbf2f01.mp4"
      style="width: 200px;"
    />
  </div>
</div>
`;

exports[`ProgressSpinner with some progress without having completed  should not make the progress segment spin if the spin prop is false 1`] = `
<div>
  <div
    class="spinnerWrapper"
  >
    <svg
      height="200"
      width="200"
    >
      <rect
        fill="white"
        height="200"
        rx="14"
        width="200"
      />
      <g
        class="vx-group"
        transform="translate(100, 100)"
      >
        <path
          class="vx-arc"
          d="M6.123233995736766e-15,-100A100,100,0,1,1,-6.123233995736766e-15,100A100,100,0,1,1,6.123233995736766e-15,-100M-1.6900125828233473e-14,-92A92,92,0,1,0,1.6900125828233473e-14,92A92,92,0,1,0,-1.6900125828233473e-14,-92Z"
          fill="#E1E6E9"
        />
        <path
          class="vx-arc"
          d="M3.552713678800501e-15,-95.91663046625439A4,4,0,0,1,4.1666666666666705,-99.91315673568165A100,100,0,0,1,93.73548796719345,-34.83759887753652A4,4,0,0,1,91.22213642600549,-29.63986885725444L91.22213642600549,-29.63986885725444A4,4,0,0,1,86.23664892981796,-32.0505909673336A92,92,0,0,0,3.833333333333333,-91.92010419682713A4,4,0,0,1,3.552713678800501e-15,-95.91663046625439Z"
          fill="#3687EF"
        />
      </g>
    </svg>
    <div
      class="textWrapper"
      style="font-size: 72px; line-height: 72px;"
    >
      <div
        class="progressValue"
      >
        20
      </div>
      <div
        class="percentage"
        style="font-size: 28.8px; color: rgb(225, 230, 233);"
      >
        %
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressSpinner with some progress without having completed  should render a progress spinner with some progress that has not yet comleted 1`] = `
<div>
  <div
    class="spinnerWrapper spinning"
  >
    <svg
      height="200"
      width="200"
    >
      <rect
        fill="white"
        height="200"
        rx="14"
        width="200"
      />
      <g
        class="vx-group"
        transform="translate(100, 100)"
      >
        <path
          class="vx-arc"
          d="M6.123233995736766e-15,-100A100,100,0,1,1,-6.123233995736766e-15,100A100,100,0,1,1,6.123233995736766e-15,-100M-1.6900125828233473e-14,-92A92,92,0,1,0,1.6900125828233473e-14,92A92,92,0,1,0,-1.6900125828233473e-14,-92Z"
          fill="#E1E6E9"
        />
        <path
          class="vx-arc"
          d="M3.552713678800501e-15,-95.91663046625439A4,4,0,0,1,4.1666666666666705,-99.91315673568165A100,100,0,0,1,93.73548796719345,-34.83759887753652A4,4,0,0,1,91.22213642600549,-29.63986885725444L91.22213642600549,-29.63986885725444A4,4,0,0,1,86.23664892981796,-32.0505909673336A92,92,0,0,0,3.833333333333333,-91.92010419682713A4,4,0,0,1,3.552713678800501e-15,-95.91663046625439Z"
          fill="#3687EF"
        />
      </g>
    </svg>
    <div
      class="textWrapper"
      style="font-size: 72px; line-height: 72px;"
    >
      <div
        class="progressValue"
      >
        20
      </div>
      <div
        class="percentage"
        style="font-size: 28.8px; color: rgb(225, 230, 233);"
      >
        %
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressSpinner with zero progress. should render a progress spinner with no progress 1`] = `
<div>
  <div
    class="spinnerWrapper"
  >
    <svg
      height="200"
      width="200"
    >
      <rect
        fill="white"
        height="200"
        rx="14"
        width="200"
      />
      <g
        class="vx-group"
        transform="translate(100, 100)"
      >
        <path
          class="vx-arc"
          d="M6.123233995736766e-15,-100A100,100,0,1,1,-6.123233995736766e-15,100A100,100,0,1,1,6.123233995736766e-15,-100M-1.6900125828233473e-14,-92A92,92,0,1,0,1.6900125828233473e-14,92A92,92,0,1,0,-1.6900125828233473e-14,-92Z"
          fill="#E1E6E9"
        />
        <path
          class="vx-arc"
          d="M6.123233995736766e-15,-100L5.633375276077825e-15,-92Z"
          fill="#3687EF"
        />
      </g>
    </svg>
    <div
      class="textWrapper"
      style="font-size: 72px; line-height: 72px;"
    >
      <div
        class="progressValue"
      >
        0
      </div>
      <div
        class="percentage"
        style="font-size: 28.8px; color: rgb(225, 230, 233);"
      >
        %
      </div>
    </div>
  </div>
</div>
`;
